Anonymous | Login | 2021-01-19 14:37 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0023860 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2013-03-26 21:24 | 2013-09-22 13:17 | ||||||||
Reporter | Aaron Michalk | ||||||||||||
Assigned To | ifv | ||||||||||||
Priority | normal | Severity | crash | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | A | OS | L | OS Version | L | ||||||||
Product Version | [OCCT] 6.5.4 | ||||||||||||
Target Version | Fixed in Version | ||||||||||||
Summary | 0023860: Bad memory access intersecting two nearly coincident cylindrical faces | ||||||||||||
Description | Executing the following code results in an access violation in Release on Windows and MacOS. It throws an exception in debug. | ||||||||||||
Steps To Reproduce | gp_Ax3 axes1(gp_Pnt(1031.3339148728076, -113.25868616662650, 56.152387686082520), gp_Dir(-0.86602540378443815, 0.50000000000000089, 0.00000000000000000), gp_Dir(-0.50000000000000089, -0.86602540378443815, 0.00000000000000000)); Handle(Geom_CylindricalSurface) surface1(new Geom_CylindricalSurface(axes1, 76.499999999999986)); gp_Ax3 axes2(gp_Pnt(1017.0706583606553, -103.24955863669388, 56.152387686082548), gp_Dir(0.86602540378443915, -0.49999999999999933, 0.00000000000000000), gp_Dir(0.49999999999999933, 0.86602540378443915, 0.00000000000000000)); Handle(Geom_CylindricalSurface) surface2(new Geom_CylindricalSurface(axes2, 76.499999999999986)); BRep_Builder builder; TopoDS_Face face1; TopoDS_Face face2; builder.MakeFace(face1, surface1, Precision::Confusion()); builder.MakeFace(face2, surface2, Precision::Confusion()); IntTools_FaceFace intersection; intersection.SetParameters(false, true, true, Precision::Confusion()); intersection.Perform(face1, face2); | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|||
Date Modified | Username | Field | Change |
2013-03-26 21:24 | Aaron Michalk | New Issue | |
2013-03-26 21:24 | Aaron Michalk | Assigned To | => abv |
2013-09-22 13:17 | abv | Assigned To | abv => ifv |
2013-09-22 13:17 | abv | Status | new => assigned |
2013-09-22 13:17 | abv | Category | OCCT:Foundation Classes => OCCT:Modeling Algorithms |
Copyright © 2000 - 2021 MantisBT Team |