0023860: Bad memory access intersecting two nearly coincident cylindrical faces

Test of 2 nearly coincident cylindrical faces intersection is added